MyLangParser.py
# Generated from MyLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MyLangParser ( Parser ):

    grammarFileName = "MyLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "';'", "'inteiro'", "'real'", 
                     "'booleano'", "'='", "'se'", "'('", "')'", "'senao'", 
                     "'enquanto'", "'escreva'", "'leia'", "'ou'", "'e'", 
                     "'>'", "'<'", "'=='", "'!='", "'+'", "'-'", "'*'", 
                     "'/'", "'!'", "'verdadeiro'", "'falso'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ID", "NUM_INT", "NUM_REAL", "WS", "COMENTARIO_LINHA", 
                      "COMENTARIO_BLOCO" ]

    RULE_programa = 0
    RULE_comando = 1
    RULE_bloco = 2
    RULE_declaracao = 3
    RULE_tipo = 4
    RULE_atribuicao = 5
    RULE_estruturaIf = 6
    RULE_estruturaWhile = 7
    RULE_comandoIO = 8
    RULE_expressao = 9
    RULE_atom = 10

    ruleNames =  [ "programa", "comando", "bloco", "declaracao", "tipo", 
                   "atribuicao", "estruturaIf", "estruturaWhile", "comandoIO", 
                   "expressao", "atom" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    ID=28
    NUM_INT=29
    NUM_REAL=30
    WS=31
    COMENTARIO_LINHA=32
    COMENTARIO_BLOCO=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MyLangParser.EOF, 0)

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyLangParser.ComandoContext)
            else:
                return self.getTypedRuleContext(MyLangParser.ComandoContext,i)


        def getRuleIndex(self):
            return MyLangParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = MyLangParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 268464498) != 0):
                self.state = 22
                self.comando()
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 28
            self.match(MyLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao(self):
            return self.getTypedRuleContext(MyLangParser.DeclaracaoContext,0)


        def atribuicao(self):
            return self.getTypedRuleContext(MyLangParser.AtribuicaoContext,0)


        def estruturaIf(self):
            return self.getTypedRuleContext(MyLangParser.EstruturaIfContext,0)


        def estruturaWhile(self):
            return self.getTypedRuleContext(MyLangParser.EstruturaWhileContext,0)


        def comandoIO(self):
            return self.getTypedRuleContext(MyLangParser.ComandoIOContext,0)


        def bloco(self):
            return self.getTypedRuleContext(MyLangParser.BlocoContext,0)


        def getRuleIndex(self):
            return MyLangParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando" ):
                return visitor.visitComando(self)
            else:
                return visitor.visitChildren(self)




    def comando(self):

        localctx = MyLangParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_comando)
        try:
            self.state = 36
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.declaracao()
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 2)
                self.state = 31
                self.atribuicao()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 32
                self.estruturaIf()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 33
                self.estruturaWhile()
                pass
            elif token in [13, 14]:
                self.enterOuterAlt(localctx, 5)
                self.state = 34
                self.comandoIO()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 6)
                self.state = 35
                self.bloco()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyLangParser.ComandoContext)
            else:
                return self.getTypedRuleContext(MyLangParser.ComandoContext,i)


        def getRuleIndex(self):
            return MyLangParser.RULE_bloco

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloco" ):
                listener.enterBloco(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloco" ):
                listener.exitBloco(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloco" ):
                return visitor.visitBloco(self)
            else:
                return visitor.visitChildren(self)




    def bloco(self):

        localctx = MyLangParser.BlocoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bloco)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(MyLangParser.T__0)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 268464498) != 0):
                self.state = 39
                self.comando()
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 45
            self.match(MyLangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(MyLangParser.TipoContext,0)


        def ID(self):
            return self.getToken(MyLangParser.ID, 0)

        def getRuleIndex(self):
            return MyLangParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao" ):
                return visitor.visitDeclaracao(self)
            else:
                return visitor.visitChildren(self)




    def declaracao(self):

        localctx = MyLangParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.tipo()
            self.state = 48
            self.match(MyLangParser.ID)
            self.state = 49
            self.match(MyLangParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyLangParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = MyLangParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 112) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MyLangParser.ID, 0)

        def expressao(self):
            return self.getTypedRuleContext(MyLangParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return MyLangParser.RULE_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuicao" ):
                listener.enterAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuicao" ):
                listener.exitAtribuicao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtribuicao" ):
                return visitor.visitAtribuicao(self)
            else:
                return visitor.visitChildren(self)




    def atribuicao(self):

        localctx = MyLangParser.AtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(MyLangParser.ID)
            self.state = 54
            self.match(MyLangParser.T__6)
            self.state = 55
            self.expressao(0)
            self.state = 56
            self.match(MyLangParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstruturaIfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self):
            return self.getTypedRuleContext(MyLangParser.ExpressaoContext,0)


        def bloco(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyLangParser.BlocoContext)
            else:
                return self.getTypedRuleContext(MyLangParser.BlocoContext,i)


        def getRuleIndex(self):
            return MyLangParser.RULE_estruturaIf

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstruturaIf" ):
                listener.enterEstruturaIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstruturaIf" ):
                listener.exitEstruturaIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEstruturaIf" ):
                return visitor.visitEstruturaIf(self)
            else:
                return visitor.visitChildren(self)




    def estruturaIf(self):

        localctx = MyLangParser.EstruturaIfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_estruturaIf)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(MyLangParser.T__7)
            self.state = 59
            self.match(MyLangParser.T__8)
            self.state = 60
            self.expressao(0)
            self.state = 61
            self.match(MyLangParser.T__9)
            self.state = 62
            self.bloco()
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 63
                self.match(MyLangParser.T__10)
                self.state = 64
                self.bloco()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstruturaWhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self):
            return self.getTypedRuleContext(MyLangParser.ExpressaoContext,0)


        def bloco(self):
            return self.getTypedRuleContext(MyLangParser.BlocoContext,0)


        def getRuleIndex(self):
            return MyLangParser.RULE_estruturaWhile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstruturaWhile" ):
                listener.enterEstruturaWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstruturaWhile" ):
                listener.exitEstruturaWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEstruturaWhile" ):
                return visitor.visitEstruturaWhile(self)
            else:
                return visitor.visitChildren(self)




    def estruturaWhile(self):

        localctx = MyLangParser.EstruturaWhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_estruturaWhile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(MyLangParser.T__11)
            self.state = 68
            self.match(MyLangParser.T__8)
            self.state = 69
            self.expressao(0)
            self.state = 70
            self.match(MyLangParser.T__9)
            self.state = 71
            self.bloco()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoIOContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self):
            return self.getTypedRuleContext(MyLangParser.ExpressaoContext,0)


        def ID(self):
            return self.getToken(MyLangParser.ID, 0)

        def getRuleIndex(self):
            return MyLangParser.RULE_comandoIO

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoIO" ):
                listener.enterComandoIO(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoIO" ):
                listener.exitComandoIO(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoIO" ):
                return visitor.visitComandoIO(self)
            else:
                return visitor.visitChildren(self)




    def comandoIO(self):

        localctx = MyLangParser.ComandoIOContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_comandoIO)
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.match(MyLangParser.T__12)
                self.state = 74
                self.match(MyLangParser.T__8)
                self.state = 75
                self.expressao(0)
                self.state = 76
                self.match(MyLangParser.T__9)
                self.state = 77
                self.match(MyLangParser.T__2)
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.match(MyLangParser.T__13)
                self.state = 80
                self.match(MyLangParser.T__8)
                self.state = 81
                self.match(MyLangParser.ID)
                self.state = 82
                self.match(MyLangParser.T__9)
                self.state = 83
                self.match(MyLangParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyLangParser.RULE_expressao

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ExprAtomContext(ExpressaoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyLangParser.ExpressaoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(MyLangParser.AtomContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprAtom" ):
                listener.enterExprAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprAtom" ):
                listener.exitExprAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprAtom" ):
                return visitor.visitExprAtom(self)
            else:
                return visitor.visitChildren(self)


    class ExprLogicaEContext(ExpressaoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyLangParser.ExpressaoContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyLangParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(MyLangParser.ExpressaoContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprLogicaE" ):
                listener.enterExprLogicaE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprLogicaE" ):
                listener.exitExprLogicaE(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprLogicaE" ):
                return visitor.visitExprLogicaE(self)
            else:
                return visitor.visitChildren(self)


    class ExprAditivaContext(ExpressaoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyLangParser.ExpressaoContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyLangParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(MyLangParser.ExpressaoContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprAditiva" ):
                listener.enterExprAditiva(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprAditiva" ):
                listener.exitExprAditiva(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprAditiva" ):
                return visitor.visitExprAditiva(self)
            else:
                return visitor.visitChildren(self)


    class ExprLogicaOuContext(ExpressaoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyLangParser.ExpressaoContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyLangParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(MyLangParser.ExpressaoContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprLogicaOu" ):
                listener.enterExprLogicaOu(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprLogicaOu" ):
                listener.exitExprLogicaOu(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprLogicaOu" ):
                return visitor.visitExprLogicaOu(self)
            else:
                return visitor.visitChildren(self)


    class ExprRelacionalContext(ExpressaoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyLangParser.ExpressaoContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyLangParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(MyLangParser.ExpressaoContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprRelacional" ):
                listener.enterExprRelacional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprRelacional" ):
                listener.exitExprRelacional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprRelacional" ):
                return visitor.visitExprRelacional(self)
            else:
                return visitor.visitChildren(self)


    class ExprNegacaoContext(ExpressaoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyLangParser.ExpressaoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressao(self):
            return self.getTypedRuleContext(MyLangParser.ExpressaoContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprNegacao" ):
                listener.enterExprNegacao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprNegacao" ):
                listener.exitExprNegacao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprNegacao" ):
                return visitor.visitExprNegacao(self)
            else:
                return visitor.visitChildren(self)


    class ExprMultiplicativaContext(ExpressaoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyLangParser.ExpressaoContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyLangParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(MyLangParser.ExpressaoContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprMultiplicativa" ):
                listener.enterExprMultiplicativa(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprMultiplicativa" ):
                listener.exitExprMultiplicativa(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprMultiplicativa" ):
                return visitor.visitExprMultiplicativa(self)
            else:
                return visitor.visitChildren(self)



    def expressao(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MyLangParser.ExpressaoContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_expressao, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                localctx = MyLangParser.ExprNegacaoContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 87
                self.match(MyLangParser.T__24)
                self.state = 88
                self.expressao(2)
                pass
            elif token in [9, 26, 27, 28, 29, 30]:
                localctx = MyLangParser.ExprAtomContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 89
                self.atom()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 109
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 107
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = MyLangParser.ExprLogicaOuContext(self, MyLangParser.ExpressaoContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 92
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 93
                        localctx.op = self.match(MyLangParser.T__14)
                        self.state = 94
                        self.expressao(8)
                        pass

                    elif la_ == 2:
                        localctx = MyLangParser.ExprLogicaEContext(self, MyLangParser.ExpressaoContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 95
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 96
                        localctx.op = self.match(MyLangParser.T__15)
                        self.state = 97
                        self.expressao(7)
                        pass

                    elif la_ == 3:
                        localctx = MyLangParser.ExprRelacionalContext(self, MyLangParser.ExpressaoContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 98
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 99
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1966080) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 100
                        self.expressao(6)
                        pass

                    elif la_ == 4:
                        localctx = MyLangParser.ExprAditivaContext(self, MyLangParser.ExpressaoContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 101
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 102
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==21 or _la==22):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 103
                        self.expressao(5)
                        pass

                    elif la_ == 5:
                        localctx = MyLangParser.ExprMultiplicativaContext(self, MyLangParser.ExpressaoContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 104
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 105
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==23 or _la==24):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 106
                        self.expressao(4)
                        pass

             
                self.state = 111
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyLangParser.RULE_atom

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AtomIdContext(AtomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyLangParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)
